--- a/nicepage.css
+++ b/nicepage.css
@@ -37557,15 +37557,18 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
-    min-height: 150px;
+    min-height: 134px;
   }
 
   .u-header .u-image-1 {
+    width: 65px;
+    height: 66px;
     margin-left: auto;
   }
 
   .u-header .u-text-1 {
-    margin: 20px -50px;
+    font-size: 1.25rem;
+    margin: 15px -50px;
   }
 }
 .u-footer .u-sheet-1 {
